load  app  completed

--- a/examples/micro.html
+++ b/examples/micro.html
@@ -9,8 +9,8 @@
         background: red;
       }
     </style>
-    <!-- <link href="./ss.css" rel="stylesheet" />
-    <script asnyc="" src="./demo.js"></script> -->
+    <!-- <link href="./ss.css" rel="stylesheet" /> -->
+    <!-- <script src="./demo.js"></script> -->
   </head>
   <body>
     <div>micro</div>
